# HE_MangaFinder

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dockge  Dockerfile.social-collector  Makefile  README.md  compose.yaml  design-qa.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  time.py
apps/api/app/db/: __init__.py  models.py  session.py  types.py
apps/api/app/modules/agent_review/: __init__.py  candidates.py  client.py  errors.py  grounding.py  prompts.py  repairs.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/authors/: __init__.py  repository.py  router.py  schemas.py
apps/api/app/modules/catalog/: __init__.py  aggregation.py  cover_fingerprint.py  cover_maintenance.py  downloads.py  group_repository.py  groups_router.py  pair_identity.py  repairs.py  repository.py  router.py  schemas.py  (+2 more)
apps/api/app/providers/: __init__.py  base.py  errors.py  hanimeone.py  mangadex.py  nhentai.py  registry.py  wnacg.py
apps/api/tests/: test_agent_review.py  test_aggregation.py  test_app_import.py  test_authors.py  test_catalog_repository.py  test_cover_cache.py  test_daily_digest.py  test_hanimeone_provider.py  test_job_recovery.py  test_mangadex_provider.py  test_nhentai_provider.py  test_provider_sorting.py  test_social_activity.py  test_social_availability.py  test_social_collector.py  test_social_media_archive.py  test_social_rules.py  test_social_service.py  test_system_config.py  test_wnacg_provider.py
apps/api/tests/fixtures/: hanimeone_author.html  hanimeone_detail.html  mangadex_author.json  mangadex_manga.json  nhentai_gallery.json  nhentai_search.json  wnacg_gallery.html  wnacg_search.html
apps/social_collector/: pyproject.toml
apps/social_collector/app/: __init__.py  graphql.py  main.py
apps/social_collector/tests/: test_graphql.py
(+77 files in other folders)
