[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mangafinder-api"
version = "0.1.0"
description = "MangaFinder modular API"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "cryptography>=41,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=11,<13",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
