[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mangafinder-social-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "playwright==1.55.0",
  "uvicorn[standard]>=0.30,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
